# Mantle op-reth Workspace
#
# Structure:
#   op-reth/       — OP Stack execution layer (from ethereum-optimism/optimism, op-reth/v2.2.1)
#   mantle-reth/   — Mantle trait override layer (custom)
#   patches/       — Minimal reth core patches (via [patch])
#
# Dependency strategy:
#   reth crates    → paradigmxyz/reth rev 88505c7f (= v2.2.0, same as upstream op-reth pins)
#   revm/op-revm   → mantle-xyz/revm branch mantle-elysium (Mantle fee model patches)
#   revm-inspectors → mantle-xyz/revm-inspectors branch mantle-elysium
#   alloy-evm      → mantle-xyz/evm branch mantle-v0.34.0 (Mantle token_ratio trait method)
#   alloy-op-evm   → mantlenetworkio/mantle-v2 branch rust/upgrade-develop-20260511 (TODO: switch to tag)
#   alloy-op-hardforks → mantlenetworkio/mantle-v2 branch rust/upgrade-develop-20260511 (TODO: switch to tag)
#   op-alloy       → mantlenetworkio/mantle-v2 branch rust/upgrade-develop-20260511 (TODO: switch to tag)
#   alloy base     → crates.io 2.0.4

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.94"
authors = ["Mantle Core Contributors"]
homepage = "https://github.com/mantle-xyz/reth"
repository = "https://github.com/mantle-xyz/reth"
exclude = ["**/target"]
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace]
resolver = "2"
members = [
  # Op-Reth (from upstream ethereum-optimism/optimism, op-reth/v2.2.1)
  "op-reth/bin/",
  "op-reth/crates/chainspec/",
  "op-reth/crates/cli/",
  "op-reth/crates/consensus/",
  "op-reth/crates/evm/",
  "op-reth/crates/flashblocks/",
  "op-reth/crates/hardforks/",
  "op-reth/crates/node/",
  "op-reth/crates/payload/",
  "op-reth/crates/primitives/",
  "op-reth/crates/reth/",
  "op-reth/crates/rpc/",
  "op-reth/crates/storage/",
  "op-reth/crates/exex/",
  "op-reth/crates/trie/",
  "op-reth/crates/txpool/",

  # Mantle-Reth
  "mantle-reth/crates/cli/",
  "mantle-reth/crates/chainspec/",
  "mantle-reth/crates/rpc-ext/",

  # Optimism ecosystem crates (from mantlenetworkio/mantle-v2, git dependency)
  # (no longer workspace members — referenced via git dep)
]
default-members = [
  "op-reth/bin/",
]

# ==================== WORKSPACE LINTS ====================
[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = { level = "deny", priority = -1 }
unnameable-types = "warn"
rust-2024-incompatible-pat = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
doc_markdown = "warn"
use-self = "warn"
# Allow patterns common in Mantle code
cognitive_complexity = "allow"
result_large_err = "allow"
too_long_first_doc_paragraph = "allow"

# ==================== PROFILES ====================
[profile.dev]
opt-level = 1
overflow-checks = false
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

# ==================== WORKSPACE DEPENDENCIES ====================
[workspace.dependencies]

# ==================== OP-RETH INTERNAL CRATES ====================
op-reth = { path = "op-reth/bin/" }
reth-optimism-chainspec = { path = "op-reth/crates/chainspec/", default-features = false }
reth-optimism-cli = { path = "op-reth/crates/cli/", default-features = false }
reth-optimism-consensus = { path = "op-reth/crates/consensus/", default-features = false }
reth-optimism-evm = { path = "op-reth/crates/evm/", default-features = false }
reth-optimism-flashblocks = { path = "op-reth/crates/flashblocks/" }
reth-optimism-forks = { path = "op-reth/crates/hardforks/", default-features = false }
reth-optimism-node = { path = "op-reth/crates/node/" }
reth-optimism-payload-builder = { path = "op-reth/crates/payload/" }
reth-optimism-primitives = { path = "op-reth/crates/primitives/", default-features = false }
reth-op = { path = "op-reth/crates/reth/", default-features = false }
reth-optimism-rpc = { path = "op-reth/crates/rpc/" }
reth-optimism-storage = { path = "op-reth/crates/storage/" }
reth-optimism-exex = { path = "op-reth/crates/exex/" }
reth-optimism-trie = { path = "op-reth/crates/trie/" }
reth-optimism-txpool = { path = "op-reth/crates/txpool/" }

# ==================== MANTLE-RETH INTERNAL CRATES ====================
mantle-reth-chainspec = { path = "mantle-reth/crates/chainspec/", default-features = false }
mantle-reth-rpc-ext = { path = "mantle-reth/crates/rpc-ext/" }
mantle-reth-cli = { path = "mantle-reth/crates/cli/" }

# ==================== RETH CRATES (crates.io published) ====================
reth-codecs = { version = "0.3.1", default-features = false, features = ["alloy"] }
reth-codecs-derive = "0.3.1"
reth-primitives-traits = { version = "0.3.1", default-features = false }
reth-rpc-traits = { version = "0.3.1", default-features = false }
reth-zstd-compressors = { version = "0.3.1", default-features = false }

# ==================== RETH CRATES (git @ v2.2.0, pinned by upstream op-reth) ====================
reth = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-prune = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-static-file = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }

# ==================== REVM (Mantle fork: mantle-elysium branch) ====================
# TODO: Switch to tag once mantle-elysium is tagged (e.g., v107-mantle-elysium.1)
revm = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-bytecode = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-database = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-state = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-primitives = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-interpreter = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-database-interface = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-inspector = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-context = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-context-interface = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }

# ==================== REVM-INSPECTORS (Mantle fork: mantle-elysium branch) ====================
# TODO: Switch to tag once mantle-elysium is tagged
revm-inspectors = { git = "https://github.com/mantle-xyz/revm-inspectors", branch = "mantle-elysium" }

# ==================== ALLOY-EVM (Mantle fork: mantle-xyz/evm, has token_ratio trait method) ====================
alloy-evm = { git = "https://github.com/mantle-xyz/evm", branch = "mantle-v0.34.0", default-features = false }

# ==================== ALLOY-OP-EVM / ALLOY-OP-HARDFORKS (Mantle: mantlenetworkio/mantle-v2) ====================
# TODO: Switch to tag once mantle-v2 Rust crates are tagged
alloy-op-evm = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
alloy-op-hardforks = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }

# ==================== OP-REVM (Mantle fork: mantle-elysium branch, same repo as revm) ====================
op-revm = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }

# ==================== OP-ALLOY (Mantle: mantlenetworkio/mantle-v2) ====================
# TODO: Switch to tag once mantle-v2 Rust crates are tagged
op-alloy = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
op-alloy-consensus = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
op-alloy-network = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
op-alloy-provider = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
op-alloy-rpc-types = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
op-alloy-rpc-types-engine = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
op-alloy-rpc-jsonrpsee = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }

# ==================== ALLOY ====================
alloy-chains = { version = "0.2.33", default-features = false }
alloy-dyn-abi = "1.5.6"
alloy-eip2124 = { version = "0.2.0", default-features = false }
alloy-eip7928 = { version = "0.3.4", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.13", default-features = false, features = ["core-net"] }
alloy-sol-macro = "1.5.6"
alloy-sol-types = { version = "1.5.6", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }
alloy-hardforks = { version = "0.4.7", default-features = false }
alloy-consensus = { version = "2.0.4", default-features = false }
alloy-contract = { version = "2.0.4", default-features = false }
alloy-eips = { version = "2.0.4", default-features = false }
alloy-genesis = { version = "2.0.4", default-features = false }
alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-network = { version = "2.0.4", default-features = false }
alloy-network-primitives = { version = "2.0.4", default-features = false }
alloy-node-bindings = { version = "2.0.4", default-features = false }
alloy-provider = { version = "2.0.4", features = ["reqwest", "debug-api"], default-features = false }
alloy-pubsub = { version = "2.0.4", default-features = false }
alloy-rpc-client = { version = "2.0.4", default-features = false }
alloy-rpc-types = { version = "2.0.4", features = ["eth"], default-features = false }
alloy-rpc-types-admin = { version = "2.0.4", default-features = false }
alloy-rpc-types-anvil = { version = "2.0.4", default-features = false }
alloy-rpc-types-beacon = { version = "2.0.4", default-features = false }
alloy-rpc-types-debug = { version = "2.0.4", default-features = false }
alloy-rpc-types-engine = { version = "2.0.4", default-features = false }
alloy-rpc-types-eth = { version = "2.0.4", default-features = false }
alloy-rpc-types-mev = { version = "2.0.4", default-features = false }
alloy-rpc-types-trace = { version = "2.0.4", default-features = false }
alloy-rpc-types-txpool = { version = "2.0.4", default-features = false }
alloy-serde = { version = "2.0.4", default-features = false }
alloy-signer = { version = "2.0.4", default-features = false }
alloy-signer-local = { version = "2.0.4", default-features = false }
alloy-transport = "2.0.4"
alloy-transport-http = { version = "2.0.4", features = ["reqwest-rustls-tls"], default-features = false }
alloy-transport-ipc = { version = "2.0.4", default-features = false }
alloy-transport-ws = { version = "2.0.4", default-features = false }

# ==================== ASYNC ====================
async-channel = "2.5"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.31"
futures-core = "0.3"
futures-util = { version = "0.3.31", default-features = false }
hyper = "1.8"
hyper-util = "0.1.20"
pin-project = "1.1.10"
tower = "0.5.3"
tower-http = "0.6"

# ==================== TOKIO ====================
tokio = { version = "1.49.0", default-features = false }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }

# ==================== RPC ====================
jsonrpsee = { version = "0.26.0", features = ["jsonrpsee-core", "client-core", "server-core", "macros"] }
jsonrpsee-core = "0.26.0"
jsonrpsee-server = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-types = "0.26.0"

# ==================== CRYPTO ====================
c-kzg = { version = "2.1.5", default-features = false }
enr = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10.9", default-features = false }
secp256k1 = { version = "0.31.1", default-features = false }

# ==================== SERIALIZATION ====================
ethereum_ssz = "0.10"
ethereum_ssz_derive = "0.10"
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
serde_repr = "0.1.20"
serde_with = { version = "3.16", default-features = false, features = ["macros"] }
toml = { version = "0.9.12", default-features = false }

# ==================== METRICS ====================
metrics = { version = "0.24.3", default-features = false }
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
metrics-process = "2.4.3"
metrics-util = { version = "0.20.1", default-features = false }

# ==================== TRACING ====================
tracing = { version = "0.1.44", default-features = false }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false }

# ==================== TESTING ====================
arbitrary = { version = "1.4.2", features = ["derive"] }
arbtest = "0.3.2"
assert_matches = "1.5.0"
proptest = "1.10.0"
proptest-derive = "0.7"
proptest-arbitrary-interop = "0.1.0"
rstest = "0.26.1"
similar-asserts = { version = "1.7.0", features = ["serde"] }
tempfile = "3.24.0"
serial_test = "3"
test-fuzz = "7.2.5"

# ==================== MISC ====================
anyhow = { version = "1.0.101", default-features = false }
aquamarine = "0.6"
auto_impl = "1.3.0"
bincode = { version = "2.0.1", features = ["serde"] }
# ==================== COMPRESSION ====================
brotli = { version = "8.0.2", default-features = false }
lz4_flex = { version = "0.12", default-features = false }
miniz_oxide = "0.9.0"
snap = "1.1.1"
tar-no-std = { version = "0.4.2", default-features = false }
zstd = "0.13"
bytes = { version = "1.11.1", default-features = false }
cfg-if = "1.0.4"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2.0", default-features = false }
either = "1"
eyre = "0.6"
humantime = "2"
itertools = "0.15"
mockall = "0.14.0"
modular-bitfield = "0.13"
once_cell = "1.21"
parking_lot = "0.12"
paste = "1"
rand = "0.9.1"
rand_08 = { package = "rand", version = "0.8" }
rayon = "1.10.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ringbuffer = "0.15"
schnellru = "0.2"
strum = { version = "0.27", features = ["derive"] }
test-case = "3"
thiserror = { version = "2", default-features = false }
tokio-tungstenite = "0.28.0"
url = "2.5"

# ==================== [patch] — reth core minimal patches ====================
# Uncomment when patches/ crates are populated:
[patch."https://github.com/paradigmxyz/reth"]
reth-trie-common = { path = "patches/reth-trie-common" }
# reth-rpc = { path = "patches/reth-rpc" }
# reth-transaction-pool = { path = "patches/reth-transaction-pool" }

# ==================== [patch.crates-io] — Force all deps to use our git versions ====================
# Without this, paradigmxyz/reth uses crates.io revm while we use git revm,
# creating incompatible duplicate types in the dependency graph.
[patch.crates-io]
# revm family: mantle-xyz/revm mantle-elysium branch
revm = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-bytecode = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-database = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-state = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-primitives = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-interpreter = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-database-interface = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-inspector = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-context = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
revm-context-interface = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
# revm-inspectors: mantle-xyz/revm-inspectors mantle-elysium branch
revm-inspectors = { git = "https://github.com/mantle-xyz/revm-inspectors", branch = "mantle-elysium" }
# op-revm: mantle-xyz/revm (same as workspace dep)
op-revm = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium" }
# alloy-evm: mantle-xyz/evm (Mantle version with token_ratio trait method)
alloy-evm = { git = "https://github.com/mantle-xyz/evm", branch = "mantle-v0.34.0" }
# alloy-op-evm / alloy-op-hardforks: mantlenetworkio/mantle-v2 (Mantle version)
alloy-op-evm = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511" }
alloy-op-hardforks = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511" }
# op-alloy: mantlenetworkio/mantle-v2 (Mantle version)
op-alloy-consensus = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511" }
op-alloy-network = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511" }
op-alloy-rpc-types = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511" }
op-alloy-rpc-types-engine = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511" }
op-alloy-rpc-jsonrpsee = { git = "https://github.com/mantlenetworkio/mantle-v2", branch = "rust/upgrade-develop-20260511" }
