[package]
name = "mantle-reth-chainspec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Mantle chain specification"

[lints]
workspace = true

[dependencies]
reth-optimism-chainspec = { workspace = true, default-features = false }
reth-chainspec = { workspace = true, default-features = false }
reth-ethereum-forks.workspace = true
reth-primitives-traits = { workspace = true, default-features = false }
alloy-genesis.workspace = true
alloy-op-hardforks.workspace = true
alloy-primitives.workspace = true
alloy-hardforks.workspace = true
alloy-serde.workspace = true
op-alloy-rpc-types.workspace = true
serde_json.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
reth-chainspec = { workspace = true, features = ["test-utils"] }

[features]
default = ["std"]
std = [
    "reth-optimism-chainspec/std",
    "reth-chainspec/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "reth-ethereum-forks/std",
    "reth-primitives-traits/std",
    "serde_json/std",
    "serde?/std",
]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "alloy-op-hardforks/serde",
    "reth-ethereum-forks/serde",
    "alloy-hardforks/serde",
]
