[package]
name = "mantle-reth-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Mantle node CLI: chain spec parser, node entry point, and version injection"

[lints]
workspace = true

[[bin]]
name = "op-reth"
path = "src/main.rs"

[dependencies]
# reth
reth-cli.workspace = true
reth-cli-util.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-db.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true

# op-reth
reth-optimism-chainspec.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-node.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-storage.workspace = true
reth-optimism-txpool.workspace = true

# mantle-reth
mantle-reth-chainspec = { path = "../chainspec" }
mantle-reth-rpc-ext = { path = "../rpc-ext" }

# ethereum
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-op-hardforks.workspace = true
op-alloy-consensus.workspace = true

# async / misc
eyre.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]

[features]
default = ["jemalloc", "otlp", "reth-optimism-evm/portable", "js-tracer", "keccak-cache-global", "asm-keccak"]
std = [
    "reth-optimism-chainspec/std",
    "mantle-reth-chainspec/std",
]

otlp = ["reth-optimism-cli/otlp"]

js-tracer = [
    "reth-optimism-node/js-tracer",
    "reth-node-builder/js-tracer",
]

jemalloc = ["reth-cli-util/jemalloc", "reth-optimism-cli/jemalloc"]
jemalloc-prof = ["jemalloc", "reth-cli-util/jemalloc-prof", "reth-optimism-cli/jemalloc-prof"]
jemalloc-symbols = ["jemalloc-prof", "reth-optimism-cli/jemalloc-symbols"]
tracy-allocator = ["reth-cli-util/tracy-allocator", "tracy"]
tracy = ["reth-optimism-cli/tracy"]

asm-keccak = ["reth-optimism-cli/asm-keccak", "reth-optimism-node/asm-keccak"]
keccak-cache-global = [
    "reth-optimism-cli/keccak-cache-global",
    "reth-optimism-node/keccak-cache-global",
]
dev = [
    "reth-optimism-cli/dev",
    "reth-optimism-primitives/arbitrary",
]

min-error-logs = ["tracing/release_max_level_error"]
min-warn-logs = ["tracing/release_max_level_warn"]
min-info-logs = ["tracing/release_max_level_info"]
min-debug-logs = ["tracing/release_max_level_debug"]
min-trace-logs = ["tracing/release_max_level_trace"]
